infra/k8s/ubuntu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      # tolerations:
      # - effect: NoSchedule
      #   key: spot
      #   operator: Equal
      #   value: "true"
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: topology.kubernetes.io/zone
      #           operator: In
      #           values:
      #           - us-east-1a
      #         - key: components
      #           operator: In
      #           values:
      #           - geral
      containers:
        - name: ubuntu
          image: ubuntu:22.04
          command: ["/bin/bash", "-c", "sleep infinity"]
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
